--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Abex",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "probot": "^10.10.1",
+    "probot": "12.2.5",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
